fix menu alignment

--- a/app/assets/stylesheets/common/left-menu.css.scss
+++ b/app/assets/stylesheets/common/left-menu.css.scss
@@ -71,7 +71,6 @@
     cursor: pointer;
     width: 16px;
     height: 16px;
-    margin-right: -4px;
     background-image: url("../images/blp_tree_arrow_right.svg");
     background-size: 8px;
     background-repeat: no-repeat;
